# alexandria

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml  vite.config.ts
.githooks/: pre-commit
.github/workflows/: node.ci.yml  release.ci.yml  tauri.ci.yml
android/app/: build.gradle.kts
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/collections/: collections.dart
lib/collections/domain/: collections_screen_notifier.dart  item_picker.dart
lib/collections/infra/: collections_file_repository.dart
lib/common/: command.dart  error_indicator.dart
lib/home/: page.dart
lib/video/: video_player.dart
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
public/assets/styles/: theme.css
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clock.rs  event_bus.rs  lib.rs  migrations.rs  repositories.rs  video.rs
src-tauri/src/collections/: collection_builder.rs  collections.rs  events.rs  mod.rs  tauri_commands.rs  tauri_dtos.rs  video.rs
src-tauri/src/infra/: mod.rs
src-tauri/src/infra/event_bus/: memory_event_bus.rs  mod.rs  tauri_event_bus.rs
src-tauri/src/infra/files/: file_manager.rs
src-tauri/src/infra/repositories/: file_repositories.rs  mod.rs
src-tauri/src/infra/tauri/: path.rs
src-tauri/src/search/: search_service.rs
src/lib/: HomePage.svelte
tests/: tsconfig.json
web/: index.html
windows/runner/: Runner.rc
(+73 files in other folders)
