[package]
name = "alexandria"
version = "0.1.0"
description = "Alexandria, edit, sort and search for your videos"
authors = ["bbougon"]
license = ""
repository = "https://github.com/bbougon/alexandria"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
parking_lot = "0.12.5"
once_cell = "1.21.3"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = "0.4.43"
base64 = "0.22.1"
tantivy = "0.22.0"
